--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-input",
   "version": "0.1.0",
-  "description": "Collection de composant react. Composant de formulaire reprenant la structure bootstrap.",
+  "description": "Collection de composant react.",
   "main": "./dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -23,12 +23,14 @@
     "url": "https://github.com/fzed51/react-input/issues"
   },
   "homepage": "https://github.com/fzed51/react-input#readme",
-  "dependencies": {
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@storybook/preset-typescript": "^3.0.0",
-    "@storybook/react": "^5.3.17"
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "typescript": "^4.5.5"
+  },
+  "peerDependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
