--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Collection de composant react.",
   "main": "./dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "repository": {
     "type": "git",
@@ -25,9 +27,22 @@
   "homepage": "https://github.com/fzed51/react-input#readme",
   "dependencies": {},
   "devDependencies": {
+    "@babel/core": "^7.16.12",
+    "@storybook/addon-actions": "^6.4.14",
+    "@storybook/addon-essentials": "^6.4.14",
+    "@storybook/addon-links": "^6.4.14",
+    "@storybook/builder-webpack5": "^6.4.14",
+    "@storybook/manager-webpack5": "^6.4.14",
+    "@storybook/react": "^6.4.14",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
-    "typescript": "^4.5.5"
+    "babel-loader": "^8.2.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "storybook": "^6.4.14",
+    "typescript": "^4.5.5",
+    "webpack": "^5.67.0",
+    "webpack-cli": "^4.9.1"
   },
   "peerDependencies": {
     "react": "^17.0.2",
