--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "react-input",
   "version": "0.1.0",
   "description": "Collection de composant react.",
-  "main": "./dist/index.js",
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/esm/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 6006",
@@ -28,6 +29,9 @@
   "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.16.12",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-typescript": "^8.3.0",
     "@storybook/addon-actions": "^6.4.14",
     "@storybook/addon-essentials": "^6.4.14",
     "@storybook/addon-links": "^6.4.14",
@@ -39,6 +43,10 @@
     "babel-loader": "^8.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "rollup": "^2.66.0",
+    "rollup-plugin-dts": "^4.1.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-terser": "^7.0.2",
     "storybook": "^6.4.14",
     "typescript": "^4.5.5",
     "webpack": "^5.67.0",
@@ -47,5 +55,9 @@
   "peerDependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
-  }
+  },
+  "files": [
+    "dist"
+  ],
+  "types": "./dist/index.d.ts"
 }
